# ec2-tracker

./: .env.example  index.html
.github/workflows/: cd.yml
assets/: index.69168899.js  index.88e7682c.js  index.92560d05.js  index.d3d6fe71.css  vendor.ee2214e1.js
crawler/: Cargo.toml
crawler/src/: ec2_instance_types.rs  ec2_reserved_offers.rs  ec2_utils.rs  main.rs  s3_utils.rs
webapp/: .editorconfig  .gitignore  Dockerfile  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
webapp/src/: App.vue  covidData.ts  types.ts
webapp/src/components/: Bar.vue  BarColumn.vue  ButtonGroup.vue  Textbox.vue  TripleBar.vue
webapp/src/lib/: asType.ts  ec2info.ts  fetchMarketplaceDataHook.ts
